--- a/index.html
+++ b/index.html
@@ -307,6 +307,83 @@
         </section>
 
 
+        <!-- Seventh Section: Education -->
+        <section id="education" class="section scrollspy">
+            <h3 class="page-title white-text teal">Education</h3>
+            <div class="container">
+                <div class="row">
+                    <!-- Master's Degree -->
+                    <div class="col s12 m6 l6">
+                        <div class="card">
+                            <div class="card-content">
+                                <p>
+                                    <span class="card-title">
+                                        <a href="https://www.colorado.edu/" target="_blank" class="teal-text hoverline">
+                                            University of Colorado, Boulder
+                                        </a>
+                                    </span>
+                                </p>
+                                <p class="brown-text">Boulder, USA</p>
+                                <p>
+                                    <b>Degree: </b>Master of Science in Mechanical Engineering
+                                    <br>
+                                    <b>Graduation: </b>May 2023
+                                </p>
+
+                                <ul>
+                                    <p>
+                                        <b>Relevant Courseworks:</b>
+                                        <ul>
+                                            <li>Motion Planning</li>
+                                            <li>Linear Control Systems</li>
+                                            <li>Feedback Control</li>
+                                            <li>Mechatronics</li>
+                                            <li>Digital Control Systems</li>
+                                            <li>Advanced Robotics</li>
+                                        </ul>
+                                    </p>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Bachelor's Degree -->
+                    <div class="col s12 m6 l6">
+                        <div class="card">
+                            <div class="card-content">
+                                <p>
+                                    <span class="card-title">
+                                        <a href="https://nitc.ac.in/" target="_blank" class="teal-text hoverline">
+                                            National Institute of Technology, Calicut
+                                        </a>
+                                    </span>
+                                </p>
+                                <p class="brown-text">Calicut, India</p>
+                                <p>
+                                    <b>Degree: </b>Bachelor of Science in Mechanical Engineering
+                                    <br>
+                                    <b>Graduation: </b>June 2021
+                                </p>
+
+                                <ul>
+                                    <p>
+                                        <b>Relevant Courseworks:</b>
+                                        <ul>
+                                            <li>Introduction to Robotics</li>
+                                            <li>Control Systems</li>
+                                            <li>Kinematics and Dynamics of Machinery</li>
+                                            <li>Machine Design</li>
+                                        </ul>
+                                    </p>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
         <!-- Third Section: Experience -->
         <section id="experience" class="section scrollspy">
             <h3 class="page-title white-text teal">Experience</h3>
@@ -423,7 +500,8 @@
                             <div class="col s12">
                                 <p>
                                     <span class="card-title teal-text hoverline" style="text-align: left; display: block;">
-                                    Design, Fabrication and Control of Rugby Robots</span>
+                                        Design, Fabrication and Control of Rugby Robots
+                                    </span>
                                 </p>
                             </div>
                         </div>
@@ -580,72 +658,72 @@
 
                 <!-- Project 2: Autonomous Vehicle Control -->
                 <!--<div class="card">
-        <div class="card-content">
-            <div class="row">
-                <div class="col s12 m2">
-                    <img alt="Autonomous Vehicle Control" src="/assets/img/autonomous_vehicle.png" class="responsive-img center-block" />
+                <div class="card-content">
+                    <div class="row">
+                        <div class="col s12 m2">
+                            <img alt="Autonomous Vehicle Control" src="/assets/img/autonomous_vehicle.png" class="responsive-img center-block" />
+                        </div>
+                        <div class="col s12 m10">
+                            <p>
+                                <span class="card-title teal-text hoverline">Autonomous Vehicle Control</span>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="role brown-text text-darken-2">Jan 2023 – May 2023</div>
+                    <ul>
+                        <li>Implemented motion planning using RRT*, integrating LiDAR data with a Particle Filter and IMU sensor.</li>
+                        <li>Developed and tuned a PID controller for optimal vehicle trajectory tracking.</li>
+                        <li>Used ROS for real-time vehicle control simulation and testing.</li>
+                        <li><b>Tools:</b> ROS, Python, LiDAR, IMU, PID Controller</li>
+                    </ul>
                 </div>
-                <div class="col s12 m10">
-                    <p>
-                        <span class="card-title teal-text hoverline">Autonomous Vehicle Control</span>
-                    </p>
-                </div>
-            </div>
-            <div class="role brown-text text-darken-2">Jan 2023 – May 2023</div>
-            <ul>
-                <li>Implemented motion planning using RRT*, integrating LiDAR data with a Particle Filter and IMU sensor.</li>
-                <li>Developed and tuned a PID controller for optimal vehicle trajectory tracking.</li>
-                <li>Used ROS for real-time vehicle control simulation and testing.</li>
-                <li><b>Tools:</b> ROS, Python, LiDAR, IMU, PID Controller</li>
-            </ul>
-        </div>
-    </div>-->
+            </div>-->
                 <!-- Project 3: Kino-dynamic Motion Planning for Multiple 3-DOF Manipulators -->
                 <!--<div class="card">
-        <div class="card-content">
-            <div class="row">
-                <div class="col s12 m2">
-                    <img alt="Kino-dynamic Motion Planning" src="/assets/img/motion_planning.png" class="responsive-img center-block" />
+                <div class="card-content">
+                    <div class="row">
+                        <div class="col s12 m2">
+                            <img alt="Kino-dynamic Motion Planning" src="/assets/img/motion_planning.png" class="responsive-img center-block" />
+                        </div>
+                        <div class="col s12 m10">
+                            <p>
+                                <span class="card-title teal-text hoverline">Kino-dynamic Motion Planning for Multiple 3-DOF Manipulators</span>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="role brown-text text-darken-2">Sep 2021 - Dec 2021</div>
+                    <ul>
+                        <li>Developed motion planning algorithms using RRT for multi-agent robot manipulators.</li>
+                        <li>Used OMPL libraries to simulate collision-free trajectory planning.</li>
+                        <li>Implemented kinematic constraints to optimize robot movement efficiency.</li>
+                        <li><b>Tools:</b> OMPL, RRT Algorithm, Python, Robot Kinematics</li>
+                    </ul>
                 </div>
-                <div class="col s12 m10">
-                    <p>
-                        <span class="card-title teal-text hoverline">Kino-dynamic Motion Planning for Multiple 3-DOF Manipulators</span>
-                    </p>
-                </div>
-            </div>
-            <div class="role brown-text text-darken-2">Sep 2021 - Dec 2021</div>
-            <ul>
-                <li>Developed motion planning algorithms using RRT for multi-agent robot manipulators.</li>
-                <li>Used OMPL libraries to simulate collision-free trajectory planning.</li>
-                <li>Implemented kinematic constraints to optimize robot movement efficiency.</li>
-                <li><b>Tools:</b> OMPL, RRT Algorithm, Python, Robot Kinematics</li>
-            </ul>
-        </div>
-    </div>-->
+            </div>-->
 
             </div>
         </section>
 
         <!-- Fourth Section: Projects -->
         <!--<section id="projects" class="section scrollspy">
-        <h3 class="page-title white-text teal">Projects</h3>
-        <div class="container">
-            <div class="row">
+    <h3 class="page-title white-text teal">Projects</h3>
+    <div class="container">
+        <div class="row">
 
-                <div class="col s12 m6 l4">
-                    <div class="card medium">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img alt="music streaming app" src="/assets/img/project-music-player.png" style="height: 100%; width: 100%" class="activator" />
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator teal-text hoverline">
-                                Music Player Web-App<i class="mdi-navigation-more-vert right"></i>
-                            </span>
-                            <p>
-                                A music streaming web app based on Django
-                            </p>
-                        </div>
-                        <div class="card-reveal">-->
+            <div class="col s12 m6 l4">
+                <div class="card medium">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img alt="music streaming app" src="/assets/img/project-music-player.png" style="height: 100%; width: 100%" class="activator" />
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator teal-text hoverline">
+                            Music Player Web-App<i class="mdi-navigation-more-vert right"></i>
+                        </span>
+                        <p>
+                            A music streaming web app based on Django
+                        </p>
+                    </div>
+                    <div class="card-reveal">-->
         <!-- TODO: change this -- only close button -->
         <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
         <!--<span class="card-title grey-text">
@@ -762,7 +840,7 @@
                                 <img alt="" src="/assets/img/C++-logo.png" class="responsive-img" />C++
                             </div>
                             <div class="col s4 m2">
-                                <img alt="" src="/assets/img/git-logo.png" class="responsive-img" />Git
+                                <img alt="" src="/assets/img/git.png" class="responsive-img" />Git
                             </div>
                             <div class="col s4 m2">
                                 <img alt="" src="/assets/img/matlab-logo.jfif" class="responsive-img" />MATLAB
@@ -789,137 +867,6 @@
                     </div>
                 </div>
 
-                <!-- Other -->
-                <div class="card">
-                    <div class="card-content">
-                        <h4 class="brown-text light">Other</h4>
-                        <div class="row text-center">
-
-
-                            <div class="col s4 m2">
-                                <img alt="" src="/assets/img/git.png" class="responsive-img" />Git
-                            </div>
-                            <div class="col s4 m2">
-                                <img alt="" src="/assets/img/aws.png" class="responsive-img" />AWS
-                            </div>
-                            <div class="col s4 m2">
-                                <img alt="" src="/assets/img/heroku.png" class="responsive-img" />Heroku
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- certifications -->
-                <!-- <div class="card">
-      <div class="card-content">
-        <h4 class="brown-text light">Certificates</h4>
-        <div class="row text-left">
-          <div class="container">
-            <div class="row">
-              <div class="col s12 m6 l6">
-                <div class="card">
-                  <div class="card-image">
-                    <img src="/assets/img/mooc-machine-learning-coursera-800x500.jpg">
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title teal-text">Machine Learning (Stanford)</span>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col s12 m6 l6">
-                <div class="card">
-                  <div class="card-image">
-                    <img src="/assets/img/mooc-algorithms-stanford-2-800x500.jpg">
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title teal-text">Algorithms (Stanford)</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
-
-            </div>
-        </section>
-
-        <!-- Seventh Section: Education -->
-        <section id="education" class="section scrollspy">
-            <h3 class="page-title white-text teal">Education</h3>
-            <div class="container">
-                <div class="row">
-                    <!-- Master's Degree -->
-                    <div class="col s12 m6 l6">
-                        <div class="card">
-                            <div class="card-content">
-                                <p>
-                                    <span class="card-title">
-                                        <a href="https://www.colorado.edu/" target="_blank" class="teal-text hoverline">
-                                            University of Colorado, Boulder
-                                        </a>
-                                    </span>
-                                </p>
-                                <p class="brown-text">Boulder, USA</p>
-                                <p>
-                                    <b>Degree: </b>Master of Science in Mechanical Engineering
-                                    <br>
-                                    <b>Graduation: </b>May 2023
-                                </p>
-
-                                <ul>
-                                    <p>
-                                        <b>Relevant Courseworks:</b>
-                                        <ul>
-                                            <li>Motion Planning</li>
-                                            <li>Linear Control Systems</li>
-                                            <li>Feedback Control</li>
-                                            <li>Mechatronics</li>
-                                            <li>Digital Control Systems</li>
-                                            <li>Advanced Robotics</li>
-                                        </ul>
-                                    </p>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Bachelor's Degree -->
-                    <div class="col s12 m6 l6">
-                        <div class="card">
-                            <div class="card-content">
-                                <p>
-                                    <span class="card-title">
-                                        <a href="https://nitc.ac.in/" target="_blank" class="teal-text hoverline">
-                                            National Institute of Technology, Calicut
-                                        </a>
-                                    </span>
-                                </p>
-                                <p class="brown-text">Calicut, India</p>
-                                <p>
-                                    <b>Degree: </b>Bachelor of Science in Mechanical Engineering
-                                    <br>
-                                    <b>Graduation: </b>June 2021
-                                </p>
-
-                                <ul>
-                                    <p>
-                                        <b>Relevant Courseworks:</b>
-                                        <ul>
-                                            <li>Introduction to Robotics</li>
-                                            <li>Control Systems</li>
-                                            <li>Kinematics and Dynamics of Machinery</li>
-                                            <li>Machine Design</li>
-                                        </ul>
-                                    </p>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
             </div>
         </section>
 
