--- a/index.html
+++ b/index.html
@@ -609,15 +609,26 @@
                         <ul>
                             <li>Implemented voice, face, and ID recognition using Machine Learning for mixing and serving drinks using a robotic arm.</li>
 
-                            <!-- First Image -->
+                            <!-- Third and Fourth Images Side-by-Side -->
                             <div class="row">
-                                <div class="col s12">
-                                    <img alt="Bartender Robot in Action" src="/assets/img/bartender-full-1.png" class="responsive-img" style="width: 80%; max-width: 600px;" />
+                                <div class="col s12 m6">
+                                    <img alt="Bartender Robot Close-up" src="/assets/img/bartender-full-1.png" class="responsive-img center-block"
+                                          style="width: 80%; max-width: 600px;" />
+                                </div>
+                                <div class="col s12 m6">
+                                    <img alt="Bartender Robot Dispensing" src="/assets/img/bartender-cad-2.png.png" class="responsive-img center-block" />
                                 </div>
                             </div>
 
+                            <!-- First Image -->
+                            <!--<div class="row">
+                                <div class="col s12">
+                                    <img alt="Bartender Robot in Action" src="/assets/img/bartender-full-1.png" class="responsive-img" style="width: 80%; max-width: 600px;" />
+                                </div>
+                            </div>-->
+
                             <!-- Second Image with Label -->
-                            <div class="row">
+                            <!--<div class="row">
                                 <div class="col s12 m6">
                                     <img alt="Bartender Robot Components" src="/assets/img/bartender-cad-2.png" class="responsive-img center-block" />
                                 </div>
@@ -627,7 +638,7 @@
                                         <p class="black-text"><b></b> Another point see where this goes.</p>
                                     </div>
                                 </div>
-                            </div>
+                            </div>-->
 
                             <!-- Third and Fourth Images Side-by-Side -->
                             <div class="row">
