--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                                           style="width: 80%; max-width: 600px;" />
                                 </div>
                                 <div class="col s12 m6">
-                                    <img alt="Bartender Robot Dispensing" src="/assets/img/bartender-cad-2.png.png" class="responsive-img center-block" />
+                                    <img alt="Bartender Robot Dispensing" src="/assets/img/bartender-cad-2.png" class="responsive-img center-block" />
                                 </div>
                             </div>
 
