--- a/index.html
+++ b/index.html
@@ -407,32 +407,29 @@
                             </div>
                         </div>
                         <div class="role brown-text text-darken-2">Automation Engineer</div>
+
                         <ul>
                             <li>Perform pharmaceutical laboratory automation for NIH/NCATS.</li>
                             <li>Acquired experience on Tormach CNC, waterjet machining, and industrial 3D printing (3D Gence F421, Stratasys resin Medijet).</li>
 
-                            <!-- Serial Evaporator System -->
-                            <li>
-                                <b>Project: Serial Evaporator System</b>
-                                <div style="margin-left: 1.5rem;">
-                                    <li>Engineered a Capping/Decapping system for high recovery vials with an optimal number of actuators.</li>
-                                    <li>Developed software for Serial Evaporator System, integrating a camera, barcode scanner, robotic arm, precision balance, and V10 evaporator.</li>
-                                </div>
+                            <li><b>Project: Serial Evaporator System</b></li>
+                            <div style="margin-left: 1.5rem;">
+                            <li>Engineered a Capping/Decapping system for high recovery vials with an optimal number of actuators.</li>
+                            <li>Developed software for Serial Evaporator System, integrating a camera, barcode scanner, robotic arm, precision balance, and V10 evaporator.</li>
+                    </div>
 
-                    <!-- Faraday Cage System -->
-                    <li>
-                        <b>Project: Faraday Cage System</b>
-                        <ul>
-                            <li>Designed and programmed a Faraday cage system with an XY stage and microscopic XYZ stage for sample analysis using electrode end-effectors.</li>
-                            <li>Created a user-friendly interface for system homing, calibration, and control, reducing analysis cycle time by 6 hours.</li>
-                        </ul>
-                    </li>
+                    <li><b>Project: Faraday Cage System</b></li>
+                    <div style="margin-left: 1.5rem;">
+                        <li>Integrated the above to a web interface on Microsoft Azure using Python, reducing evaporation cycle time by 2 hours.</li>
+                        <li>Designed and programmed a Faraday cage system with an XY stage and microscopic XYZ stage for sample analysis using electrode end-effectors.</li>
+                        <li>Created a user-friendly interface for system homing, calibration, and control, reducing analysis cycle time by 6 hours.</li>
+                    </div>
                     </ul>
                 </div>
-                    <div class="card-action">
-                        <span>Jul 2023 – Present | North Bethesda, MD</span>
-                    </div>
+                <div class="card-action">
+                    <span>Jul 2023 – Present | North Bethesda, MD</span>
                 </div>
+            </div>
 
 
                 <!-- Experience 2: Laboratory Automation Internship at Axle Informatics -->
