--- a/index.html
+++ b/index.html
@@ -423,18 +423,23 @@
                                 <li>Technologies used: OnShape, Solidworks, 3D printing, CNC machining, Python programming, Computer Vision.</li>
                     </div>
 
-                            <li><b>Serial Evaporator System</b></li>
+                            <li><b>Capper-Decapper System</b></li>
                             <div style="margin-left: 1.5rem;">
                                 <li>Engineered a Capper-Decapper system to streamline vial processing by integrating it with the Meca500 robotic arm, ensuring seamless vial handling without manual intervention.</li>
                                 <li>The vials and gripped and rotated with same actuator. Circular wedge design enable the system to grip vial when pushed from top, and release vials after the capping/decapping is completed.</li>
                                 <li>Technologies used: OnShape, Solidworks, 3D printing, CNC machining.</li>
                     </div>
 
-                    <li><b>Faraday Cage System</b></li>
-                    <div style="margin-left: 1.5rem;">
-                        <li>Designed and programmed a Faraday cage system with an XY stage and microscopic XYZ stage for sample analysis using electrode end-effectors.</li>
-                        <li>Created a user-friendly interface for system homing, calibration, and control, reducing analysis cycle time by 6 hours.</li>
-                    </div>
+                            <li><b>Semi-Automated Fiber photometry device</b></li>
+                            <div style="margin-left: 1.5rem;">
+                                <li>Developed an automated system to manipulate an electric probe into wells of a well-plate, enabling scientists to analyze and measure electrical activity in 3D engineered tissues.</li>
+                                <li>Integrated an XY stage to position the well-plate and an XYZ microscopic stage to control the probe and camera.</li>
+                                <li>Created custom drivers for the motion stages, ensuring accurate and repeatable movement of the probe and well-plate.</li>
+                                <li>Designed and developed a user-friendly interface allowing scientists to connect, home the system, select well-plate type, calibrate rack positions, and move to desired wells effortlessly.</li>
+                                <li>Implemented automated calibration routines to enhance accuracy and reproducibility in electrical signal detection within the cells.</li>
+                                <li>The system reduced analysis cycle time by 6 hours per plate.</li>
+                                <li>Technologies used: Python programming, Streamlit Library.</li>
+                            </div>
                     </ul>
 
                 </div>
