--- a/index.html
+++ b/index.html
@@ -275,10 +275,9 @@
                 </p>
                 <p>
                     <ul>
-                        <li><b>Languages:</b> Python, C++</li>
-                        <li><b>Robotics & Automation:</b> ROS, PLCs, CNC Machining, 3D Printing</li>
-                        <li><b>Simulation & Motion Planning:</b> RRT, OMPL, Control Systems</li>
-                        <li><b>Tools & Technologies:</b> MATLAB, SolidWorks, Jetson, Arduino, Raspberry Pi</li>
+                        <li><b>Programming Languages and Software:</b> C++, Robotic Operating System, Python, GitHub, MATLAB, Simulink</li>
+                        <li><b>Computer Aided Design & Manufacturing:</b> Solidworks, OnShape, CNC machining, 3D Printing, Pneumatics</li>
+                        <li><b>Microcontrollers and Hardware:</b> Arduino, Raspberry Pi</li>
                     </ul>
 
                 </p>
@@ -287,9 +286,9 @@
 
               Detail-oriented Automation Engineer with professional experience in Backend Development, Machine Learning, Computer Vision. I am adept in Python, Django, Flask, SQL, Machine Learning, Computer Vision.
             </p> -->
-                <p>
+                <!--<p>
                     Looking for an opportunity to work in a challenging position combining my skills in Mechanical Engineering, which provides professional development, interesting experiences and personal growth.
-                </p>
+                </p>-->
                 <!-- <p>
               Another Paragraph
             </p>  -->
