--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
 
                             <li>Integrated tactile sensors for gripping, ultrasound sensors, and developed algorithms for a 5-DOF series manipulator.</li>
                             <li>Used ROS, Arduino, Raspberry Pi, and Nvidia Jetson to control the robotic system.</li>
-                            <li><b>Tools:</b> ROS, OpenCV, Machine Learning, Arduino, Raspberry Pi, Nvidia Jetson</li>
+                            <li><b>Technologies used:</b></li>
                         </ul>
                     </div>
                 </div>
@@ -686,7 +686,7 @@
 
                             <li>Integrated tactile sensors for gripping, ultrasound sensors, and developed algorithms for a 5-DOF series manipulator.</li>
                             <li>Used ROS, Arduino, Raspberry Pi, and Nvidia Jetson to control the robotic system.</li>
-                            <li><b>Tools:</b> ROS, OpenCV, Machine Learning, Arduino, Raspberry Pi, Nvidia Jetson</li>
+                            <li><b>Technologies used:</b> ROS, OpenCV, Machine Learning, Arduino, Raspberry Pi, Nvidia Jetson</li>
                         </ul>
                     </div>
                 </div>
