--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                             <h2>Hi, I'm <span class="teal">Vijaya Krishna Veerisetty.</span></h2>
                             <h5 style="color:#fff"><span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
                             <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-                            <h5>Automation Engineer specializing in robotics, motion planning, and industrial automation.</h5>
+                            <!--<h5>Automation Engineer specializing in robotics, motion planning, and industrial automation.</h5>-->
                         </div>
                         <div class="social">
                             <a href="https://www.linkedin.com/in/vijaya-krishna-veerisetty-723063182/" target="_blank">
@@ -779,7 +779,7 @@
                        class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
                         <i class="fa fa-external-link"></i>
                     </a>
-                    <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Vijaybhogayata/music-player"
+                    <a aria-label="Visit the GitHub repo for  project" href=""
                        target="_blank" data-position="top" data-tooltip="View Source"
                        class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
                         <i class="fa fa-github"></i>
@@ -820,7 +820,7 @@
                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
                     <i class="fa fa-external-link"></i>
                 </a>
-                <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Vijaybhogayata/QuizUp"
+                <a aria-label="Visit the GitHub repo for  project" href=""
                    target="_blank" data-position="top" data-tooltip="View Source"
                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
                     <i class="fa fa-github"></i>
