--- a/index.html
+++ b/index.html
@@ -413,32 +413,39 @@
 
                             <li><b>Serial Evaporator System</b></li>
                             <div style="margin-left: 1.5rem;">
-                                <li>Identified inefficiencies in manual vial evaporation and developed a benchtop automated system to improve speed, accuracy, and reliability in high-throughput laboratory workflows.</li>
-                                <li>Programmed and integrated a Meca500 robotic arm to automate vial handling, capping/decapping, barcode tracking, and weight measurement, reducing manual intervention.</li>
-                                <li>Implemented seamless communication between the Barcode Reader, Camera, Sartorius balance, Capper-Decapper system, and Biotage V-10 evaporator,ensuring precise and repeatable operations.</li>
-                                <li>Developed a structured robotic workflow, optimizing vial transport between devices while maintaining strict process control and data integrity.</li>
-                                <li>Engineered automated barcode scanning and real-time weight capture, eliminating human error and enhancing sample traceability.</li>
-                                <li>Optimized batch processing to handle 16 vials in a single cycle, significantly reducing overall processing time compared to manual methods.</li>
-                                <li>Technologies used: OnShape, Solidworks, 3D printing, CNC machining, Python programming, Computer Vision.</li>
+                            <li>Identified inefficiencies in manual vial evaporation and developed a benchtop automated system to improve speed, accuracy, and reliability in high-throughput laboratory workflows.</li>
+                            <li>Programmed and integrated a Meca500 robotic arm to automate vial handling, capping/decapping, barcode tracking, and weight measurement, reducing manual intervention.</li>
+                            <li>Implemented seamless communication between the Barcode Reader, Camera, Sartorius balance, Capper-Decapper system, and Biotage V-10 evaporator,ensuring precise and repeatable operations.</li>
+                            <li>Developed a structured robotic workflow, optimizing vial transport between devices while maintaining strict process control and data integrity.</li>
+                            <li>Engineered automated barcode scanning and real-time weight capture, eliminating human error and enhancing sample traceability.</li>
+                            <li>Optimized batch processing to handle 16 vials in a single cycle, significantly reducing overall processing time compared to manual methods.</li>
+                            <li>Technologies used: OnShape, Solidworks, 3D printing, CNC machining, Python programming, Computer Vision.</li>
                     </div>
 
-                            <li><b>Capper-Decapper System</b></li>
-                            <div style="margin-left: 1.5rem;">
-                                <li>Engineered a Capper-Decapper system to streamline vial processing by integrating it with the Meca500 robotic arm, ensuring seamless vial handling without manual intervention.</li>
-                                <li>The vials and gripped and rotated with same actuator. Circular wedge design enable the system to grip vial when pushed from top, and release vials after the capping/decapping is completed.</li>
-                                <li>Technologies used: OnShape, Solidworks, 3D printing, CNC machining.</li>
+                    <li><b>Capper-Decapper System</b></li>
+                    <div style="margin-left: 1.5rem;">
+                        <li>Engineered a Capper-Decapper system to streamline vial processing by integrating it with the Meca500 robotic arm, ensuring seamless vial handling without manual intervention.</li>
+                        <li>The vials and gripped and rotated with same actuator. Circular wedge design enable the system to grip vial when pushed from top, and release vials after the capping/decapping is completed.</li>
+                        <li>Technologies used: OnShape, Solidworks, 3D printing, CNC machining.</li>
                     </div>
 
-                            <li><b>Semi-Automated Fiber photometry device</b></li>
-                            <div style="margin-left: 1.5rem;">
-                                <li>Developed an automated system to manipulate an electric probe into wells of a well-plate, enabling scientists to analyze and measure electrical activity in 3D engineered tissues.</li>
-                                <li>Integrated an XY stage to position the well-plate and an XYZ microscopic stage to control the probe and camera.</li>
-                                <li>Created custom drivers for the motion stages, ensuring accurate and repeatable movement of the probe and well-plate.</li>
-                                <li>Designed and developed a user-friendly interface allowing scientists to connect, home the system, select well-plate type, calibrate rack positions, and move to desired wells effortlessly.</li>
-                                <li>Implemented automated calibration routines to enhance accuracy and reproducibility in electrical signal detection within the cells.</li>
-                                <li>The system reduced analysis cycle time by 6 hours per plate.</li>
-                                <li>Technologies used: Python programming, Streamlit Library.</li>
-                            </div>
+                    <li><b>Glove Box Automation</b></li>
+                    <div style="margin-left: 1.5rem;">
+                        <li>Developed a multifunctional end-of-arm-tooling for a UR3 robotic arm to automate vial, pipette, and rack handling within a glove box environment, reducing manual effort in chemical synthesis workflows.</li>
+                        <li>Designed a custom single capable of securely gripping diverse labware (racks, pipettes, and vials) enabling seamless tool transitions without the need for end-effector changeover.</li>
+                        <li>Technologies used: OnShape, Solidworks, 3D printing, CNC machining</li>
+                    </div>
+
+                    <li><b>Semi-Automated Fiber photometry device</b></li>
+                    <div style="margin-left: 1.5rem;">
+                        <li>Developed an automated system to manipulate an electric probe into wells of a well-plate, enabling scientists to analyze and measure electrical activity in 3D engineered tissues.</li>
+                        <li>Integrated an XY stage to position the well-plate and an XYZ microscopic stage to control the probe and camera.</li>
+                        <li>Created custom drivers for the motion stages, ensuring accurate and repeatable movement of the probe and well-plate.</li>
+                        <li>Designed and developed a user-friendly interface allowing scientists to connect, home the system, select well-plate type, calibrate rack positions, and move to desired wells effortlessly.</li>
+                        <li>Implemented automated calibration routines to enhance accuracy and reproducibility in electrical signal detection within the cells.</li>
+                        <li>The system reduced analysis cycle time by 6 hours per plate.</li>
+                        <li>Technologies used: Python programming, Streamlit Library.</li>
+                    </div>
                     </ul>
 
                 </div>
@@ -610,9 +617,9 @@
                                 </div>
                             </div>
 
-                            <li>Integrated tactile sensors for gripping, ultrasound sensors, and developed algorithms for a 5-DOF series manipulator.</li>
-                            <li>Used ROS, Arduino, Raspberry Pi, and Nvidia Jetson to control the robotic system.</li>
-                            <li><b>Technologies used:</b></li>
+                            <li>Programmed systems for integrating encoders, IR sensors, LDRs, and gyroscopes with pneumatic mechanisms.</li>
+                            <li>Developed and implemented a PID control system for coordinated football throwing and receiving between a pair of robots.</li>
+                            <li><b>Technologies used: Solidworks, Pnuematics, 3D printing, sensors (Light Dependent Resistors, Encoders)</b></li>
                         </ul>
                     </div>
                 </div>
